# Alice

./: CHANGELOG.md  README.md  __init__.py  __main__.py  alice.py  alice_conf.py  config.py  main.py  menu.py  pyproject.toml
alice/: __init__.py  __main__.py  alice.py  alice_in_shell.py  config.py  menu.py
