[tool.flit.scripts]
alice = "alice:main"

[build-system]
requires-python = ">=3.7"
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "alice"
author = "Denis Aseev"
author-email = "brerfox33@gmail.com"
home-page = "https://github.com/hokkubit/Alice"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "README.md"

